2000-11-23  Akim Demaille  <akim@epita.fr>

	Factor part of the prologue of the tests.

	* tests/atgeneral.m4 (AT_SETUP, AT_CLEANUP): No longer handle
	at_stop_on_error.
	(AT_INIT): After having checked whether the test failed, break out
	of the loop if requested (-e).

	
2000-11-23  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_SETUP): Don't build at-check-line, that's
	AT_CHECK's job.
	Remove the code depending upon `at_skip_mode': it's unused.

	
2000-11-23  Akim Demaille  <akim@epita.fr>

	* tests/atconfig.in: Remove the `snippet' marks, there are no
	longer used.
	* tests/atgeneral.m4: Likewise.

2000-11-23  Akim Demaille  <akim@epita.fr>

	Factor the epilogue of the tests.

	* tests/atgeneral.m4 (AT_CLEANUP): Move the reading of at_status
	into...
	(AT_INIT): here, at the end of the `case'.

2000-11-23  Akim Demaille  <akim@epita.fr>

	The debug scripts are only wrapper around testsuite, asking for a
	specific test.

	* tests/atgeneral.m4 (AC_INIT) <at_debug>: New variable, new
	option, -d, to disable the creation of the debug scripts (when
	testsuite was already launched from one).
	<at_test_count>: Really compute it instead of using the number of
	the last test run.

2000-11-23  Akim Demaille  <akim@epita.fr>

	Transform Autotest's body into a `for test; case $test'.
	As a known side effect, currently any code outside
	AT_SETUP/AT_CLEANUP is discarded.

	* acgeneral.m4 (_m4_divert(KILL)): Move to...
	* m4sugar.m4: here.
	* tests/atgeneral.m4 (AT_INIT): Use m4_divert_push/pop instead of
	m4_divert.
	Put all the tests inside a for;case.
	Define TESTS.
	(AT_SETUP, AT_CLEANUP): Open/close each case.

2000-11-23  Akim Demaille  <akim@epita.fr>

	Move divert and undivert into m4_.

	* m4sugar.m4 (m4_divert, divert, undivert): Rename as...
	(m4_divert_text, m4_divert, m4_undivert): this.
	* autoconf.m4 (divert, undivert): Restore them for user macros only.

2000-11-23  Akim Demaille  <akim@epita.fr>

	Move Autotest on top of M4sh.
